test_regress/t/t_prop_s_always_liveness.out
*-* All Finished *-*
[115] %Error: t_prop_s_always_liveness.v:25: Assertion failed in top.t
%Error: t/t_prop_s_always_liveness.v:25: Verilog $stop
Aborting...
